syntax = "proto3";

package CovidLib;

message Article {
  bytes ZippedJsonFileName = 1;
  bytes ZippedBucketFileName = 2;
  bytes ZippedTitle = 3;
  int32 CounterIndex = 4;
}

message Articles {
  repeated Article List = 1;  
}

message StringToArticlesDictionary {
   map<string, Articles> Dictionary = 1;
}
